# darknet

./: .editorconfig  .gitignore  APPLE_GPU_BENCHMARKS.md  APPLE_GPU_SUPPORT_PLAN.md  CM_dependencies.cmake  CM_misc.cmake  CM_package.cmake  CM_source.cmake  CM_version.cmake  CMakeLists.txt  Doxyfile  LICENSE  METAL_KERNEL_REGISTRY.md  Makefile  README.md  README_CMake_flags.md  README_GCC_PGO.md  README_GPU_AMD_ROCM.md  README_GPU_APPLE_METAL.md  README_GPU_NVIDIA_CUDA.md  README_ONNX.md  README_PGO.md  README_previous.md  benchmarks.md  build_ubuntu.sh  build_windows.cmd  clean_install_prefix.cmake  old_Makefile  version.txt
.forgejo/workflows/: codeberg-tiny.yml  codeberg-tiny.yml.DISABLED
.github/: SUPPORT.md
.github/ISSUE_TEMPLATE/: ask-a-question.md  feature_request.md  report-a-bug.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build-darknet.yml
artwork/: darknet.xcf  darknet_logo_banner.xcf  hankai_darknet.xcf
cfg/: CMakeLists.txt  coco.data  yolov4-tiny-bdp.cfg
colab/: 01_Building_the_Hank_ai_Darknet_YOLO_Framework.ipynb  02_Building_Darknet_and_DarkHelp_to_use_the_Python_interface.ipynb  03_Training_a_new_network.ipynb
doc/: 01_darknet.dox  02_license.dox  03_api.dox  CMakeLists.txt  Doxyfile.in  darknet.dox
doc_apple_mps/: APPLE_GPU_INFERENCE_PLAN.md  APPLE_GPU_MPS_IMPLEMENTATION.md  APPLE_GPU_PARITY_MATRIX.md  APPLE_GPU_TRAINING_PLAN.md
old/: old_CMakeLists.txt
old/old_src/: yolo_console_dll.cpp
old_build/darknet/: darknet_no_gpu.vcxproj  yolo_cpp_dll_no_gpu.vcxproj
old_src/: activations.c  blas_kernels.cu  classifier.c  coco.c  convolutional_kernels.cu  convolutional_layer.c  darknet_utils.cpp  darknet_utils.hpp  demo.c  detector.c  gemm.c  image.c  image.h  image_opencv.cpp  image_opencv.h  matrix.c  network.c  route_layer.c  shortcut_layer.c  softmax_layer.c  utils.h  yolo_layer.c
other/: windows_extract_cudnn_paths.md
src/: CMakeLists.txt  Chart.cpp  Chart.hpp  activation_kernels.cu  activation_layer.cpp  activation_layer.hpp  activations.c  activations.hpp  art.c  art.cpp  avgpool_layer.hpp  avgpool_layer_kernels.cu  batchnorm_layer.hpp  blas.c  blas.cpp  blas.hpp  blas_kernels.cu  box.c  box.cpp  box.hpp  captcha.cpp  cifar.cpp  classifier.c  classifier.cpp  coco.cpp  col2im_kernels.cu  compare.cpp  connected_layer.c  connected_layer.cpp  connected_layer.hpp  conv_lstm_layer.hpp  convolutional_kernels.cu  convolutional_layer.c  convolutional_layer.cpp  convolutional_layer.hpp  cost_layer.cpp  cost_layer.hpp  crnn_layer.hpp  crop_layer.cpp  crop_layer.hpp  (+102 more)
src-cli/: CMakeLists.txt  darknet.cpp  darknet_cli.cpp
src-cli/windows/: darknet.aps
src-examples/: CMakeLists.txt  darknet_01_inference_images.cpp  darknet_02_display_annotated_images.cpp  darknet_03_display_videos.cpp  darknet_04_process_videos.cpp  darknet_05_process_videos_multithreaded.cpp  darknet_06_images_to_json.cpp  darknet_07_display_rtsp_stream.cpp  darknet_08_display_webcam.cpp  darknet_09_keypoints_images.cpp  darknet_10_keypoints_videos.cpp  darknet_11_images_to_yolo.cpp
src-lib/: CMakeLists.txt  Cfg.cpp  Cfg.hpp  Chart.cpp  Chart.hpp  Timing.cpp  Timing.hpp  activation_kernels.cu  activation_layer.cpp  activations.cpp  activations.hpp  amd_rocm.cpp  amd_rocm.hpp  apple_mps.hpp  apple_mps.mm  art.cpp  avgpool_layer.cpp  avgpool_layer.hpp  avgpool_layer_kernels.cu  batchnorm_layer.cpp  batchnorm_layer.hpp  blas.cpp  blas.hpp  blas_kernels.cu  box.cpp  box.hpp  captcha.cpp  cifar.cpp  classifier.cpp  classifier.hpp  coco.cpp  col2im.cpp  col2im.hpp  col2im_kernels.cu  compare.cpp  connected_layer.cpp  connected_layer.hpp  conv_lstm_layer.cpp  convolutional_kernels.cu  convolutional_layer.cpp  (+131 more)
src-lib/apple/: apple_mps.hpp  apple_mps.mm
src-onnx/: .gitignore  CMakeLists.txt  darknet_node.cpp  darknet_node.hpp  darknet_onnx.cpp  darknet_onnx.hpp  darknet_onnx_export.cpp  darknet_onnx_main.cpp  onnx.pb.cc  onnx.pb.h  onnx.pb.txt  onnx.proto3.pb.cc  onnx.proto3.pb.h  onnx.proto3.pb.txt  onnx.proto3.txt  onnx_check_model.py  onnx_display_model.py  onnx_test_model.py
src-other/: ctrack.hpp  ctrack.txt  json.txt
src-python/: darknet.py  darknet_images.py  darknet_video.py  example.py  example.txt  readme.md
src-test/: CMakeLists.txt  test_angular_correction.cpp  test_angular_gradients.cpp  test_bdp_forward_loss.cpp  test_bdp_gradients.cpp  test_box.cpp  test_fp_loss.cpp  test_front_point_cosine.cpp  test_get_yolo_box_bdp.cpp  test_grad_newriou.cpp  test_image.cpp  test_iou_loss.cpp  test_main.cpp  test_misc.cpp  test_random.cpp  test_riou_gradients_comprehensive.cpp  test_riou_random_validation.cpp  test_rotated_iou.cpp  test_rotated_iou_gradients.cpp  test_rotated_rect_transform.cpp  test_time.cpp  test_yolo_gradients.cpp
src/windows/: darknet.rc  gettimeofday.h
